2005-03-30 AIDA Shinra <shinra@j10n.org>
* 1.0 release
* build.sh: add "x" at case expressions. cosmetic.
* xinitrc.info.in: cosmetic

2005-03-29 AIDA Shinra <shinra@j10n.org>
* build.sh: fix typo in a comment

2005-03-29 AIDA Shinra <shinra@j10n.org>
* 0.7 release

2005-03-29 AIDA Shinra <shinra@j10n.org>
* build.sh: Create tarball of release version. Fixed "dry-run" feature.
* xinitrc.info.in(DescPackaging): removed
  (Source): added
  (Source-MD5): added
  (Type): comment out from release version
  (Patch): ditto
* sedsrc/sys-xinitrc-fink.in: Note that it works even after the "xinitrc"
  package is removed.

2005-01-30 AIDA Shinra <shinra@j10n.org>
* 0.6 release
* xinitrc.info.in(Description): shorten to under 45 characters
  (DescPackaging): added

2004-08-10 AIDA Shinra <shinra@j10n.org>
* 0.5 release
* doc/README.txt: s/framework/mechanism/g, design desc
* xinitrc.info.in: s/framework/mechanism/g

2004-08-09 AIDA Shinra <shinra@j10n.org>
* 0.4 release
* build.sh: install README.txt in -m 644

2004-08-09 AIDA Shinra <shinra@j10n.org>
* 0.3 release
* doc/README.txt: added
* xinitrc.info.in: fink validate

2004-07-03 AIDA Shinra <shinra@j10n.org>
* 0.2 release
* update-sys-xinitrc: change [Y/n] confirmation

2004-05-05 AIDA Shinra <shinra@j10n.org>
* cosmetic

2004-05-05 AIDA Shinra <shinra@j10n.org>
* 0.1 release
* update-sys-xinitrc: added
* bugfix

2004-05-05 AIDA Shinra <shinra@j10n.org>
* Rename sysclientrc-fink to sys-xinitrc-fink.
* build.sh: Use cd $firstpwd instead of subshell because set -e does not
  works as we want.

2004-05-04 AIDA Shinra <shinra@j10n.org>
* Initial revision. Automated update of system xinitrc is not yet done.

$Id: ChangeLog,v 1.13 2005/03/30 01:26:29 shinra Exp $