@@ -1,5 +1,5 @@
 #! /bin/sh
-# $Id: sys-xinitrc-fink.in,v 1.3 2005/03/29 13:41:42 shinra Exp $
+# $Id: sys-xinitrc-fink.in,v 1.1.1.1 2005/04/07 12:31:27 aida_s Exp $
 
 # This script works even after the Fink "xinitrc" package is removed.
 # Don't worry.
@@ -15,9 +15,9 @@ else
 
     userresources=$HOME/.Xresources
     usermodmap=$HOME/.Xmodmap
-    sysresources=/usr/X11R6/lib/X11/xinit/.Xresources
-    sysmodmap=/usr/X11R6/lib/X11/xinit/.Xmodmap
-    x_bindir=/usr/X11R6/bin
+    sysresources=@XINITDIR@/.Xresources
+    sysmodmap=@XINITDIR@/.Xmodmap
+    x_bindir=@X_BINDIR@
 
     # merge in defaults and keymaps
 
